# mxsrclib

./: .clang-tidy  .gitignore  CMakeLists.txt  correct_alg.cpp  correct_alg.h  csvwork.cpp  csvwork.h  dbgprn.cpp  dbgprn.h  delx.bat  eeprom.cpp  eeprom.h  gdefs.h  hardflowg.cpp  hardflowg.h  i2c.cpp  i2c.h  i2c_niiet.cpp  i2c_niiet.h  imp_filt.cpp  imp_filt.h  info.txt  irs_chart_data.cpp  irs_chart_data.h  irs_codecvt.h  irs_param_list.cpp  irs_param_list.h  irsadc.cpp  irsadc.h  irsadcabs.h  irsalg.cpp  irsalg.h  irscalc.cpp  irscalc.h  irschartwin.h  irscompositeusb.h  irsconfig.h  irsconfig0.h  irsconsole.h  irsconsolestd.h  (+137 more)
arch/arm/: armadc.cpp  armadc.h  armcfg.cpp  armcfg.h  armeth.cpp  armeth.h  armflash.cpp  armflash.h  armgpio.cpp  armgpio.h  armi2c.cpp  armi2c.h  armiomacros.h  armioregs.h  armregs_cortex_m3.h  armregs_lm3s.h  armregs_niiet.h  armregs_niietk1921vk0xx.h  armregs_stm32.h  armregs_stm32f2xx.h  armregs_stm32f7xx.h  armspi.cpp  armspi.h  armwdt.h  counter.cpp  irsarchint.cpp  irsarchint.h  irsarmutil.cpp  irsarmutil.h  irscpp.h  irscpu.cpp  irsdefsarch.h  irsstm32_usb_hid_hardflow.cpp  irsstm32_usb_hid_hardflow.h  irsstm32f2xx_usb_hid_hardflow.cpp  irsstm32f2xx_usb_hid_hardflow.h  mxifa.cpp  mxnetda.h  stm32f2x7_eth_conf.h  stm32f2xx_conf.h  (+3 more)
arch/arm_st_hal/: counter.cpp  counter.h  i2c_stm32.cpp  i2c_stm32.h  irsdefsarch.h  mxifa.cpp  mxnetda.h
arch/avr/: RTL8019AS.cpp  RTL8019AS.h  UDP_stack.cpp  UDP_stack.h  avr info.txt  avradc.cpp  avradc.h  avrdev.cpp  avrdev.h  avrgpio.cpp  avrgpio.h  avrspi.cpp  avrspi.h  counter.cpp  counter.h  delx.bat  hardflow.cpp  hardflow.h  irsarchint.cpp  irsarchint.h  irsavrutil.cpp  irsavrutil.h  irsdefsarch.h  irseeprom.cpp  irseeprom.h  irsrtl.cpp  irsrtl.h  irsstdl.cpp  irsstdl.h  lirsdefs.h  mxifa.cpp  mxifal.h  mxnetda.h
arch/cbuilder/: MxBase.cpp  MxBase.h  MxChart.cpp  MxChart.h  cbcomp.cpp  cbcomp.h  cbsysutils.cpp  cbsysutils.h  cbuilder info.txt  counter.cpp  counter.h  fs_cppbuilder.cpp  fs_cppbuilder.h  hardflow.cpp  hardflow.h  irscberror.cpp  irscberror.h  irscbstrconv.h  irsdefsarch.h  irsparam.cpp  irsparam.h  irsstdl.cpp  irsstdl.h  lirsdefs.h  mxifa.cpp  mxifal.h  mxini.cpp  mxini.h  mxnetda.h  tstlan4lib.cpp  tstlan4lib.h  tstlan5lib.cpp  tstlan5lib.h
arch/dos32/: counter.cpp  counter.h  irsdefsarch.h  irsstdl.cpp  irsstdl.h  lirsdefs.h  mxifa.cpp
arch/linux/: armio.cpp  armio.h  armmap.h  armspi.cpp  armspi.h  at91_spimode.h  counter.cpp  counter.h  irsarcherror.cpp  irsarcherror.h  irsdefsarch.h  irsstdl.cpp  irsstdl.h  linux info.txt  lirsdefs.h  mxifa.cpp  mxifal.h  mxnetda.h
arch/qt/: counter.cpp  counter.h  irsdefsarch.h  irsqtstrconv.h  irsstdl.cpp  irsstdl.h  mxifa.cpp  qt info.txt
arch/visualcpp/: MxBase.cpp  MxBase.h  MxChart.cpp  MxChart.h  counter.cpp  counter.h  hardflow.cpp  hardflow.h  irsdefsarch.h  irsstdl.cpp  irsstdl.h  lirsdefs.h  mxifa.cpp  mxifal.h  mxini.cpp  mxini.h  mxnetda.h  visualcpp info.txt
convert_mxsrclib_headers/: CMakeLists.txt
convert_mxsrclib_headers/docs/: README.md  requirements.txt
convert_mxsrclib_headers/docs/doxygen/theme/doxygen-custom/: custom.css
convert_mxsrclib_headers/docs/src/: docs.md
converted_headers/: CMakeLists.txt
docs/: .gitignore  conf.py  index.md
docs/_static_local/css/: custom.css
docs/doxygen/: Doxyfile
docs/scripts/: linux_build.sh  linux_cleanup.sh  windows_build.bat  windows_install.bat
docs/src/: docs.md
utf8_headers/: CMakeLists.txt
utils/info/: hardflowg.doc  info.txt  irsmbus.doc  lwipbuf.docx  mxdata.doc  mxdata_ext.doc  mxsrclib desc.doc  mxsrclib desc.docx  svn quartus ignore.txt  todo.txt  Заголовки.vsd  Проект mxsrclib (текст).doc  Проект mxsrclib.vsd  расход памяти в avr128.doc
utils/libconfig/: irsconfig_proj.h  lwipopts.h  lwipopts_proj.h  stm32f2x7_eth_conf_proj.h  stm32f2xx_conf_proj.h  stm32f4x7_eth_conf.h  stm32f4x7_eth_conf_proj.h  stm32f4xx_conf_proj.h  stm32f7xx_hal_conf_proj.h
utils/samples/irsmbus/: modbus_client.cpp  modbus_server.cpp
utils/samples/irsmembuf/: irsmembuf.h
utils/scripts/: arc  arc..bak  clr.sh  clr.sh.bak  delquartus.bat  delx.bat  git_edit.sh  koi2win.sh  kw  lib backup x.cmd  lib clear x.cmd  prog backup.cmd  right.sh  right.sh.bak  win2koi.sh  wk
utils/set/: avr.bat  cbuilder.bat  dos32.bat  linux.bat  visualcpp.bat
utils/src/kbd linux/: hard.cpp  hard.h
utils/src/modbus_rtu/: modbus.cpp  modbus.h
utils/src/other/: irsosc.h
utils/src/rdtsc direct/: counter.cpp
utils/src/simple_modbus/: irsmbus.h
utils/src/template in template/: tmpl.cpp
utils/templates/avr2561/: config.cpp  hard.h  libtst.dep  libtst.ewd  libtst.ewp  libtst.eww  main.cpp  mainprg.cpp
utils/templates/avr2561/Debug/Exe/: libtst.a90
utils/templates/avr2561/Debug/List/: config.lst  counter.lst  main.lst  mainprg.lst  timer.lst
utils/templates/avr2561/settings/: libtst.wsdt
utils/templates/bcb4/: boundtst.bpr  boundtst.cpp  main.cpp  main.dfm  main.h  mainprg.cpp  mainprg.h
utils/templates/bcb6/: config.cpp  config.h  general.bpr  general.cpp  main.cpp  main.dfm  main.h  mainprg.cpp
utils/templates/gcc-arm-linux/: make_arm  make_pc  makefile
utils/templates/gcc-arm-linux/other/: config.cpp  config.h  main.cpp  mainprg.cpp  mainprg.h  tmpllin.kateproject
utils/templates/gcc-avr32-linux/: clean  make_avr32  makefile
utils/templates/gcc-nios2-linux-uclibc/: clean  make_nios2  make_pc  makefile
utils/templates/gcc-pc/: clean  makefile
utils/templates/general/: config.h  mainprg.cpp
utils/test/maxvlib/: delx.bat  irsfilter.cpp  irsfilter.h  irsmessenger.cpp  irsmessenger.h  tableg.cpp  tableg.h  tablel.cpp  tablel.h
utils/test/serglib/: irsarcherror.cpp  irsarcherror.h  irsrtltest.cpp  irsrtltest.h  irstcpiptest.cpp  irstcpiptest.h
utils/test/unit_tests/: hardflowg_test.cpp  irs_codecvt_test.cpp  irsalg_test.cpp  irsdcp_test.cpp  irsfilter_test.cpp  irshfftp_test.cpp  irsnetdefs_test.cpp  irssysutils_test.cpp  mxdata_test.cpp
